@@ -9,25 +9,17 @@ The New Media page is used to upload or create media, such as images (.jpg, .gif
 <li><b>Title:</b> Required field used to give your image a unique name.</li>
 <li><b>Site/Categories:</b>	  Required field used to designate the URL of the site or category where you want to upload your media. Clicking the <i>Choose</i> button will launch a menu tree where you can find the correct category. From the menu tree click <i>OK</i> to accept your choice or <i>Cancel</i> to return to the New Media page.</li>
 <li><b>Upload File:</b>  Click on <i>Browse</i> to find an image or other media you would like to upload. This is a required field for binary types; otherwise you may leave it blank, and Krang will attempt to create an empty file named after your Title.</li>
-<li><b>Default Caption:</b> Text field where you can enter a default caption to associate with your media. This is an optional field and may not appear within the output depending on the template configuration.</li>
-<li><b>Default Copyright:</b> Text field where you can enter a default copyright to associate with your media. This is an optional field and may not appear within the output depending on the template configuration.</li>
-<li><b>Alt Tag:</b> Text field where you can enter an alt tag to associate with your media. Alt tags are displayed on a web page when the image is not available or spoken by a screen reader.</li>
-<li><b>Notes:</b> Optional field where you can enter information about the image. Notes are not  displayed in a story.</li>
-<li><b>Contributors:</b> A contributor can be any person, for example a writer or photographer who contributed to the media. Click on <i>Edit Contributors</i> to associate, or un-associate your contributors. See <a href="help.pl?topic=contributor_associate" class="helplink">Associate Contributors</a> for additional Help.</li>
-</ul>
 
 After entering in the above information choose one of the buttons at the bottom of the page.
 
 <ul>
 
 <li><b>Cancel:</b> Click on <i>Cancel</i> to discard your new media.<li>
-<li><b>Save &amp; Stay:</b> Click on <i>Save & Stay</i> to save your media, publish it to preview, and remain on the Edit Media screen.</li>
-<li><b>Save:</b> Click on <i>Save</i> to save your media and return to your Workspace.</li>
-<li><b>Publish to Preview:</b> Click on <i>Publish to Preview</i> to publish your media immediately to the preview site. (Starting with Krang v3.01, clicking Save &amp; Stay also triggers an automatic Publish-to-Preview.)</li>
-<li><b>Publish:</b> Click on <i>Publish</i> to publish your media immediately to the live site. If you would like to schedule your media to publish at a later date, click on <i>Schedule</i> at the top of the page. See <a href="help.pl?topic=schedule" class="helplink">Schedule Editor</a> for more information.</li>
+<li><b>Create:</b> Click on <i>Create</i> to save your media, publish it to preview, and go to the Edit Media screen.</li>
+
+</ul>
 
 <p>
-
 </p>
 
 <tmpl_include help_footer.tmpl>
