@@ -1,6 +1,6 @@
 <tmpl_include help_header.tmpl>
 <h2>View Media</h2>
 <p>
-The view media interface lists properties and content of a Media in a read-only version. To edit a Media click on <i>Edit</i> at the bottom of the view page.
+The view media interface lists properties and content of a Media object in a read-only version. To edit a Media object click on <i>Edit</i> at the bottom of the view page.
 </p>
 <tmpl_include help_footer.tmpl>
